crates/ruff_python_parser/tests/snapshots/invalid_syntax@function_def_missing_return_type.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/function_def_missing_return_type.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..19,
        body: Suite {
            range: 0..19,
            node_index: NodeIndex(None),
            statements: [
                FunctionDef(
                    StmtFunctionDef {
                        node_index: NodeIndex(None),
                        range: 0..18,
                        is_async: false,
                        decorator_list: [],
                        name: Identifier {
                            id: Name("foo"),
                            range: 4..7,
                            node_index: NodeIndex(None),
                        },
                        type_params: None,
                        parameters: Parameters {
                            range: 7..9,
                            node_index: NodeIndex(None),
                            posonlyargs: [],
                            args: [],
                            vararg: None,
                            kwonlyargs: [],
                            kwarg: None,
                        },
                        returns: None,
                        body: Suite {
                            range: 15..18,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 15..18,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 15..18,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | def foo() -> : ...
  |              ^ Syntax Error: Expected an expression
  |
